--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.1"
+reqwest = { version = "0.11.2", features = ["blocking"] }
+dotenv = "0.15.0"
