--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 itertools = "0.10.1"
 reqwest = { version = "0.11.2", features = ["blocking"] }
 dotenv = "0.15.0"
+colored = "2.0.0"
+rand = "0.8.4"
