--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.1"
-reqwest = { version = "0.11.2", features = ["blocking"] }
+ureq = "2.3.1"
 dotenv = "0.15.0"
 colored = "2.0.0"
 rand = "0.8.4"
